# urho3d-simple-multiplayer-shooter

./: ArchitectureNotes.md  CMakeLists.txt  README.md
app/src/Server/: AiPlayerState.cpp  AiPlayerState.hpp  Character.cpp  PlayerState.cpp  PlayerState.hpp  Spawner.cpp  Spawner.hpp  Urho3DApplication.cpp
sources/Server/: AiPlayerState.cpp
